Bug 202907 - 10.2 on SolarFlare SFN5162F 10Gb/s NIC missing out traffic
Summary: 10.2 on SolarFlare SFN5162F 10Gb/s NIC missing out traffic
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: 10.2-RELEASE
Hardware: amd64 Any
: --- Affects Only Me
Assignee: Andrew Rybchenko,St.Petersburg Russia
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-05 16:04 UTC by presess
Modified: 2016-04-27 11:20 UTC (History)
2 users (show)

See Also:
arybchik: maintainer-feedback+
arybchik: mfc-stable10+
arybchik: mfc-stable9-


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description presess 2015-09-05 16:04:13 UTC
Hi, i have a problem on my 10Gb NIC SolarFlare  SFN5162F SFP+. 
systat -if and netstat -I sfxge not showing out traffic. 
For my Intel gbit interface em0  systat/netstat showin all correctly. 

                    /0   /1   /2   /3   /4   /5   /6   /7   /8   /9   /10
     Load Average

      Interface           Traffic               Peak                Total
            lo0  in      0.000 KB/s          0.000 KB/s            0.090 KB
                 out     0.000 KB/s          0.000 KB/s            0.090 KB

            em0  in     20.778 KB/s         22.007 KB/s            2.169 MB
                 out    26.362 KB/s         26.362 KB/s          274.287 KB

         sfxge1  in      7.598 KB/s         21.739 KB/s           10.926 MB
                 out     0.000 KB/s          0.000 KB/s            0.000 KB


# netstat -I em0 -i 1
            input            em0           output
   packets  errs idrops      bytes    packets  errs      bytes colls
        19     0     0      14962         22     0      29044     0
        16     0     0      14845         21     0      28932     0
        20     0     0      15478         22     0      28878     0
        24     0     0      15394         21     0      28878     0
        15     0     0      14702         21     0      28878     0

# netstat -I sfxge1 -i 1
            input         sfxge1           output
   packets  errs idrops      bytes    packets  errs      bytes colls
         0     0     0      15127          0     0          0     0
         0     0     0      14884          0     0          0     0
         0     0     0      15234          0     0          0     0
         0     0     0      14948          0     0          0     0
         0     0     0      14768          0     0          0     0


10.2-RELEASE FreeBSD 10.2-RELEASE #1: Sat Sep  5 16:56:24 CEST 2015

Best regards
Comment 1 Enji Cooper freebsd_committer freebsd_triage 2015-09-07 06:23:21 UTC
Not on net, but I figured this bug needs more information before it can be appropriately triaged.

Please provide...
- ... the ifconfig output for em0/sfxge1.
- ... the output of `sysctl hw.sfxge`.
Comment 2 Enji Cooper freebsd_committer freebsd_triage 2015-09-07 06:27:19 UTC
Sidenote: based on code inspection, specifying -i when specifying -I <interface> is redundant.
Comment 3 presess 2015-09-07 10:28:55 UTC
Hi,

sfxge1: flags=8843<UP,BROADCAST,RUNNING,SIMPLEX,MULTICAST> metric 0 mtu 1500
        options=6c07ab<RXCSUM,TXCSUM,VLAN_MTU,JUMBO_MTU,VLAN_HWCSUM,TSO4,TSO6,LRO,VLAN_HWTSO,LINKSTATE,RXCSUM_IPV6,TXCSUM_IPV6>
        ether 00:0f:53:08:48:89
        inet 192.168.2.1 netmask 0xffffff00 broadcast 192.168.2.255
        nd6 options=29<PERFORMNUD,IFDISABLED,AUTO_LINKLOCAL>
        media: Ethernet 10Gbase-SR <full-duplex,rxpause,txpause>
        status: active

em0: flags=8c02<BROADCAST,OACTIVE,SIMPLEX,MULTICAST> metric 0 mtu 1500
        options=4019b<RXCSUM,TXCSUM,VLAN_MTU,VLAN_HWTAGGING,VLAN_HWCSUM,TSO4,VLAN_HWTSO>
        ether 74:d4:35:e7:40:af
        inet 10.10.2.1 netmask 0xffffff00 broadcast 10.10.2.255
        nd6 options=29<PERFORMNUD,IFDISABLED,AUTO_LINKLOCAL>
        media: Ethernet autoselect (1000baseT <full-duplex>)
        status: active


root@rtr:/# sysctl -a | grep hw.sfxge
hw.sfxge.tso_fw_assisted: 1
hw.sfxge.tx_dpl_put_max: 1024
hw.sfxge.tx_dpl_get_non_tcp_max: 1024
hw.sfxge.tx_dpl_get_max: 65536
hw.sfxge.lro.loss_packets: 20
hw.sfxge.lro.slow_start_packets: 2000
hw.sfxge.lro.idle_ticks: 0
hw.sfxge.lro.chain_max: 20
hw.sfxge.lro.table_size: 128
hw.sfxge.tx_ring: 1024
hw.sfxge.rx_ring: 1024

root@rtr:/# sysctl -a | grep hw.em
hw.em.eee_setting: 1
hw.em.rx_process_limit: 100
hw.em.enable_msix: 1
hw.em.sbp: 0
hw.em.smart_pwr_down: 0
hw.em.txd: 1024
hw.em.rxd: 1024
hw.em.rx_abs_int_delay: 66
hw.em.tx_abs_int_delay: 66
hw.em.rx_int_delay: 0
hw.em.tx_int_delay: 66


root@rtr:/# sysctl -a | grep octets
dev.em.2.mac_stats.good_octets_txd: 0
dev.em.2.mac_stats.good_octets_recvd: 0
dev.em.1.mac_stats.good_octets_txd: 0
dev.em.1.mac_stats.good_octets_recvd: 0
dev.em.0.mac_stats.good_octets_txd: 456051
dev.em.0.mac_stats.good_octets_recvd: 1531824
dev.sfxge.1.stats.tx_octets: 1087206
dev.sfxge.1.stats.rx_octets: 23345200
Comment 4 Andrew Rybchenko,St.Petersburg Russia freebsd_committer freebsd_triage 2015-09-08 11:26:32 UTC
That's my fault. Since statistics support differs in HEAD (if_get_counter) and earlier stable branches (periodic update of counters in ifnet). I've forgotten to merge stable/10-specific patch. I'll care about it.

(If it helps you, there is no the issue in driver available on Solarflare support site)
Comment 5 commit-hook freebsd_committer freebsd_triage 2015-12-11 06:41:15 UTC
A commit references this bug:

Author: arybchik
Date: Fri Dec 11 06:41:02 UTC 2015
New revision: 292089
URL: https://svnweb.freebsd.org/changeset/base/292089

Log:
  sfxge: implement interface statistics shown by netstat

  PR:             202907
  Submitted by:   Boris Misenov <Boris.Misenov at oktetlabs.ru>
  Reviewed by:    gnn, philip
  Sponsored by:   Solarflare Communications, Inc.
  Differential Revision: https://reviews.freebsd.org/D4317

Changes:
  stable/10/sys/dev/sfxge/sfxge.c
  stable/10/sys/dev/sfxge/sfxge.h
  stable/10/sys/dev/sfxge/sfxge_port.c
  stable/10/sys/dev/sfxge/sfxge_tx.c
  stable/10/sys/dev/sfxge/sfxge_tx.h
  stable/10/sys/dev/sfxge/sfxge_version.h
Comment 6 Andrew Rybchenko,St.Petersburg Russia freebsd_committer freebsd_triage 2016-04-27 11:20:28 UTC
Fixed in 10.3-RELEASE