sfxge: implement interface statistics shown by netstat

PR:             202907
Submitted by:   Boris Misenov <Boris.Misenov at oktetlabs.ru>
Reviewed by:    gnn, philip
Sponsored by:   Solarflare Communications, Inc.
Differential Revision: https://reviews.freebsd.org/D4317

Former-commit-id: b62f7c2d4aefc968970b2dec107e90875a5145b0