sys/dev/sfxge/sfxge_tx.h
@@ -543,6 +543,19 @@ end_struct_decl
 
 begin_function_decl
 specifier|extern
+name|void
+name|sfxge_tx_update_stats
+parameter_list|(
+name|struct
+name|sfxge_softc
+modifier|*
+name|sc
+parameter_list|)
+function_decl|;
+end_function_decl
+
+begin_function_decl
+specifier|extern
 name|int
 name|sfxge_tx_init
 parameter_list|(
